--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://nuocergcapwdrngodpip.supabase.co/storage/v1/object/public/media/favicon.png" type="image/x-icon">
+    <link rel="icon" type="image/png" href="https://nuocergcapwdrngodpip.supabase.co/storage/v1/object/public/media/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cactus Makes Perfect</title>
   </head>
