--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cactus Makes Perfect</title>
   </head>
-  <body class="bg-cactus-sand font-body">
+  <body class="bg-cactus-green font-body">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
